--- a/Avc.html
+++ b/Avc.html
@@ -26,7 +26,7 @@
     }
 
     .popup-content {
-      position: relative; /* Needed for absolutely positioning the close button */
+      position: relative; 
       background: linear-gradient(145deg, #FFD700, #FF8C00);
       padding: 3rem;
       border-radius: 20px;
@@ -119,7 +119,7 @@
       box-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
     }
 
-    /* Additional style for the "X" close button at top-right */
+   
     .popup-close-btn {
       position: absolute;
       top: 10px;
@@ -163,27 +163,25 @@
   <!-- Popup HTML -->
   <div id="popup" class="popup">
     <div class="popup-content">
-      <!-- Close "X" button (closes the popup without redirecting) -->
+     
       <button class="popup-close-btn" onclick="closePopupNoRedirect()">×</button>
 
       <h1 class="popup-title">TechnothirsT'2k25</h1>
       <p class="popup-subtitle">Welcome to the Technical Symposium</p>
-      <div class="popup-animation"><!-- Your animation here --></div>
-      <!-- "Let's Begin" button: closes the popup and redirects -->
+      <div class="popup-animation"></div>
       <button onclick="redirectPopup()" class="close-popup">Let's Begin!❤️‍🔥</button>
     </div>
   </div>
 
   <header>
-    <!-- Your header content goes here -->
+  
   </header>
 
   <script>
-    // Wait for the DOM to be fully loaded
+ 
     document.addEventListener('DOMContentLoaded', () => {
       const popup = document.getElementById('popup');
       if (popup) {
-        // Show the popup only if it hasn't been shown in this session
         if (!sessionStorage.getItem('popupShown')) {
           popup.style.display = 'flex';
           sessionStorage.setItem('popupShown', 'true');
@@ -193,11 +191,9 @@
       }
     });
 
-    // Function to close the popup without redirecting
     function closePopupNoRedirect() {
       const popup = document.getElementById('popup');
       if (popup) {
-        // Fade out the popup (if desired)
         popup.style.animation = 'fadeOut 0.5s';
         setTimeout(() => {
           popup.style.display = 'none';
@@ -205,14 +201,12 @@
       }
     }
 
-    // Function to close the popup with a fade-out and then redirect
     function redirectPopup() {
       const popup = document.getElementById('popup');
       if (popup) {
         popup.style.animation = 'fadeOut 0.5s';
         setTimeout(() => {
           popup.style.display = 'none';
-          // Redirect to the desired page (replace with your actual URL)
           window.location.href = 'index.html';
         }, 500);
       }
