--- a/Avc.html
+++ b/Avc.html
@@ -1,3 +1,6 @@
+<!--add this file directly in avc main web page beacuse this page contains the popup card and their when clicking the popup it redirects to 
+the index.html file written by me.if the author already have index.html file then change the indexfile into symp.html and change the path 
+wherever need-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
